# event_planner_platform

./: README.md  crud.py  database.py  main.py  models.py  package-lock.json  pr7.docx  pyproject.toml  routers.py  schemas.py
event-planner-frontend/: README.md  package-lock.json  package.json
event-planner-frontend/src/: App.vue  helpers.js  main.js
event-planner-frontend/src/components/: CreateEvent.vue  EventAdmin.vue  EventDetails.vue  EventList.vue  Home.vue  Login.vue  Register.vue
event-planner-frontend/src/router/: index.js
event-planner-frontend/src/store/: index.js
